--- a/Labboratorio10/app/src/main/res/layout/activity_auth.xml
+++ b/Labboratorio10/app/src/main/res/layout/activity_auth.xml
@@ -33,6 +33,7 @@
             android:inputType="textPassword" />
 
         <LinearLayout
+            android:id="@+id/horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
@@ -50,6 +51,17 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Acceder" />
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Google" />
+
         </LinearLayout>
+
+
+
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
